Cleaning up code here and there... Too many white spaces and some of it was out of date. Fixing bugs and cleaning up code.

--- a/cora/dashboard/public/stylesheets/custom.css
+++ b/cora/dashboard/public/stylesheets/custom.css
@@ -24,8 +24,9 @@
 }
 
 .member_card {
-  height: 350;
-  width: 250;
+  vertical-align: top;
+  min-height: 240;
+  min-width: 320;
   display: inline-block;
   text-align: left;
   padding: 0.5rem;
@@ -35,6 +36,7 @@
   border-width: 2px;
 }
 .member_avatar {
+  text-align: center;
   max-height: 64px;
   max-width: 64px;
   border-radius: 10%;
@@ -42,9 +44,8 @@
   border-style: solid;
   border-width: 4px;
 }
-
 .settings_card_base {
-  text-align: left;
+  text-align: left;  
   padding: 0.5rem;
   background-color: rgba(118, 118, 145, 0.295);
   border-color: rgba(88, 95, 126, 0.288);
@@ -52,6 +53,8 @@
   border-width: 2px;
 }
 .settings_card_modules {
+  vertical-align: top;
+  min-height: 150px;
   display: inline-block;
   text-align: left;
   padding: 0.5rem;
